--- a/lesson-5/css/main-5.css
+++ b/lesson-5/css/main-5.css
@@ -9,6 +9,7 @@ body {
 
 header, nav, main, footer { /* the comma means apply the following CSS declarations to all of the listed elements */
   /* Declare the maximum width and other main element rules to limit the stretch on wide views */
+    max-width: 100%;
 }
 
 header {float: left;
@@ -70,11 +71,28 @@ main figure img { width: 100%; }
 section {}
 
 article p.town-article img {  /* This structure refers to img elements that are the posterity of paragraph elements within artcle elements */
-  width: 100%; /* fill the page in the small/phone view */
+/*
+  width: 100%;  fill the page in the small/phone view
   margin: 10px;
+*/
 }
 
-footer {}
+footer {
+/*    border: 1px solid black;*/
+
+    margin:15px;
+    float: left;
+    text-align: left;
+
+
+
+    /*        max-width: 33%; */
+    min-width: 33%px;
+    padding: 10px;
+
+    border-radius: 5px;
+    /*margin: 0 auto;*/
+}
 footer aside {}
 footer>p {} /* This structure refers to p elements that are direct children of the footer element */
 
@@ -97,70 +115,83 @@ footer>p {} /* This structure refers to p elements that are direct children of t
 }
 
 .summary1 {
-    text-align: center;
-    float: left;
-    padding: 10px;
-    margin: 10px;
-    box-sizing: border-box;
-    display:inline-block;
+    border: 1px solid black;
 
-    max-width: 33%;
+    margin:15px;
+    float: left;
+    text-align: center;
+/*    position: absolute;*/
+
+
+
+    /*        max-width: 33%; */
+    min-width: 30%px;
+    padding: 10px;
+
     border-radius: 5px;
+    /*margin: 0 auto;*/
+    /*clear: both;*/
+/*    display: block;*/
 }
 
 .article {
-    text-align: center;
-    max-width: 33%;
-    float:left;
-    position:relative;
-    padding: 10px;
-    margin: 10px;
+    border: 1px solid black;
     display:block;
-    clear: both;
-    overflow: auto;
+
+    margin:15px;
+    float: left;
+    text-align: center;
+/*    position: absolute;*/
+
+
+
+    /*        max-width: 33%; */
+    min-width: 33%px;
+    padding: 15px;
+/*    word-wrap: normal;*/
 
     border-radius: 5px;
-
+/*    margin: 0 auto;*/
+/*    clear: both;*/
 }
-footer{
-    display:block;
-    position:relative;
-    overflow: auto;
-    bottom: 0px;
-    max-width: 50%;
-    padding-left:5px;
-    clear: both;
 
-}
+
+
 
 .content {
     text-align:justify;
     max-width: 100%;
     align-content: center;
+    position:relative;
+    display:inline-block;
 
-    align-content: center;
-    position:static;
+
+/*    position:static;*/
     padding: 10px;
     margin: 10px;
-    display:block;
-    clear: both;
-    overflow: auto;
-   /* background-color: #0E89D5; */
+/*    display:block;*/
+/*    clear: both;*/
+/*    overflow: auto;*/
+    /*background-color: #0E89D5; */
     border-radius: 5px;
+
+
 
 }
 
 
-td{
+/*td{*/
+/*
     max-width: 33%;
     margin-left: 10px;
     margin-right: 10px;
+*/
 
 
 }
 
 .artimage {
-    max-height: 25%;
-    max-width: 25%;
-    position:relative;
+
+    display: none;
+
 }
