Fixed CSS issues and added flex box features

--- a/lesson-5/css/medium-5.css
+++ b/lesson-5/css/medium-5.css
@@ -86,7 +86,7 @@
 
 
         /*        max-width: 33%; */
-        min-width: 33%px;
+        min-width: 400px;
         padding: 10px;
 
         border-radius: 5px;
