--- a/lesson-5/css/main-5.css
+++ b/lesson-5/css/main-5.css
@@ -47,9 +47,9 @@ nav ul li a {display: block;
 nav ul li.active a {}
 nav ul li a:hover {}
 nav button {
-    position: absolute;
+
     left: 0px;
-    top: 200px;
+
     float: left;
     margin-left: 5px;
 
@@ -163,7 +163,10 @@ footer>p {} /* This structure refers to p elements that are direct children of t
     max-width: 100%;
     align-content: center;
     position:relative;
-    display:inline-block;
+    display:inline-flex;
+    flex-flow: row wrap;
+    align-content: center;
+    justify-content: center;
 
 
 /*    position:static;*/
@@ -193,5 +196,11 @@ footer>p {} /* This structure refers to p elements that are direct children of t
 .artimage {
 
     display: none;
+
+}
+
+.top{
+display: flex;
+flex-direction: column;
 
 }
