--- a/lesson-5/css/main-5.css
+++ b/lesson-5/css/main-5.css
@@ -1,35 +1,49 @@
 /* This main css file contains the default rules and is geared toward the small/phone view */
 
-* { box-sizing: border-box;}  /* This wildcard applies to all elements ensuring a box layout model */
-
-body {
-  font-size: 16px;
-  /* Declare the base font-family - from google font api or other */
+* {
+    box-sizing: border-box;
 }
 
-header, nav, main, footer { /* the comma means apply the following CSS declarations to all of the listed elements */
-  /* Declare the maximum width and other main element rules to limit the stretch on wide views */
+/* This wildcard applies to all elements ensuring a box layout model */
+
+body {
+    font-size: 16px;
+    /* Declare the base font-family - from google font api or other */
+}
+
+header,
+nav,
+main,
+footer {
+    /* the comma means apply the following CSS declarations to all of the listed elements */
+    /* Declare the maximum width and other main element rules to limit the stretch on wide views */
     max-width: 100%;
 }
 
-header {float: left;
+header {
+    float: left;
     padding: 10px;
 
 }
+
 header h1 {}
+
 header img {
     resize: both;
     max-height: 25%;
     max-width: 25%;
 
 }
+
 header .subheading {}
 
 nav {}
+
 nav button {
-    float:left;
+    float: left;
     position: relative;
 }
+
 nav ul {
     display: none;
     list-style-type: none;
@@ -38,14 +52,20 @@ nav ul {
     width: 200px;
     background-color: #f1f1f1;
 }
+
 nav ul li {}
-nav ul li a {display: block;
+
+nav ul li a {
+    display: block;
     color: #000;
     padding: 8px 16px;
     text-decoration: none;
 }
+
 nav ul li.active a {}
+
 nav ul li a:hover {}
+
 nav button {
 
     left: 0px;
@@ -55,32 +75,36 @@ nav button {
 
 }
 
-ul {
+ul {}
 
-}
-
-li a {
-
-}
+li a {}
 
 main {}
+
 main h2 {}
-main figure { margin: 0 0 .2rem 2%; width:96%; }
-main figure img { width: 100%; }
+
+main figure {
+    margin: 0 0 .2rem 2%;
+    width: 96%;
+}
+
+main figure img {
+    width: 100%;
+}
 
 section {}
 
-article p.town-article img {  /* This structure refers to img elements that are the posterity of paragraph elements within artcle elements */
-/*
+article p.town-article img {
+    /* This structure refers to img elements that are the posterity of paragraph elements within artcle elements */
+    /*
   width: 100%;  fill the page in the small/phone view
   margin: 10px;
 */
 }
 
 footer {
-/*    border: 1px solid black;*/
-
-    margin:15px;
+    /*    border: 1px solid black;*/
+    margin: 15px;
     float: left;
     text-align: left;
 
@@ -93,18 +117,23 @@ footer {
     border-radius: 5px;
     /*margin: 0 auto;*/
 }
+
 footer aside {}
-footer>p {} /* This structure refers to p elements that are direct children of the footer element */
+
+footer > p {}
+
+/* This structure refers to p elements that are direct children of the footer element */
 
 .forecast {
     display: none;
 }
+
 /* Other Class Selectors */
 
 .city {
-    position:absolute;
+    position: absolute;
     right: 0px;
-    float:right;
+    float: right;
     margin: 10px;
     padding: 5px;
     top: 20px;
@@ -117,64 +146,57 @@ footer>p {} /* This structure refers to p elements that are direct children of t
 .summary1 {
     border: 1px solid black;
 
-    margin:15px;
+    margin: 15px;
     float: left;
     text-align: center;
-/*    position: absolute;*/
-
-
-
+    /*    position: absolute;*/
     /*        max-width: 33%; */
     min-width: 30%px;
-    padding: 10px;
+    padding: 15px;
 
     border-radius: 5px;
     /*margin: 0 auto;*/
     /*clear: both;*/
-/*    display: block;*/
+    /*    display: block;*/
 }
 
 .article {
     border: 1px solid black;
-    display:block;
+    display: block;
 
-    margin:15px;
+    margin: 15px;
     float: left;
     text-align: center;
-/*    position: absolute;*/
-
-
-
+    /*    position: absolute;*/
     /*        max-width: 33%; */
     min-width: 33%px;
     padding: 15px;
-/*    word-wrap: normal;*/
-
+    /*    word-wrap: normal;*/
     border-radius: 5px;
-/*    margin: 0 auto;*/
-/*    clear: both;*/
+    /*    margin: 0 auto;*/
+    /*    clear: both;*/
 }
 
 
 
 
 .content {
-    text-align:justify;
+    text-align: justify;
     max-width: 100%;
     align-content: center;
-    position:relative;
-    display:inline-flex;
+    position: relative;
+    display: inline-flex;
     flex-flow: row wrap;
     align-content: center;
     justify-content: center;
 
 
-/*    position:static;*/
+    /*    position:static;*/
     padding: 10px;
     margin: 10px;
-/*    display:block;*/
-/*    clear: both;*/
-/*    overflow: auto;*/
+    /*    display:block;*/
+    /*    clear: both;*/
+    /*    overflow: auto;*/
     /*background-color: #0E89D5; */
     border-radius: 5px;
 
@@ -184,12 +206,12 @@ footer>p {} /* This structure refers to p elements that are direct children of t
 
 
 /*td{*/
+
 /*
     max-width: 33%;
     margin-left: 10px;
     margin-right: 10px;
 */
-
 
 }
 
@@ -199,8 +221,8 @@ footer>p {} /* This structure refers to p elements that are direct children of t
 
 }
 
-.top{
-display: flex;
-flex-direction: column;
+.top {
+    display: flex;
+    flex-direction: column;
 
 }
