--- a/lesson-5/css/medium-5.css
+++ b/lesson-5/css/medium-5.css
@@ -79,7 +79,7 @@
     section.forecast {
         border: 1px solid black;
 
-        margin:10px;
+        margin:15px;
         float: left;
         text-align: center;
 
@@ -87,19 +87,22 @@
 
         /*        max-width: 33%; */
         min-width: 400px;
-        padding: 10px;
+        padding: 15px;
 
         border-radius: 5px;
         /*margin: 0 auto;*/
         /*clear: both;*/
-        display: inherit;
+        display:inline-flex;
+        flex-flow: row wrap;
+        align-content: center;
+        justify-content: center;
     }
 
 
     .article {
         border: 1px solid black;
 
-        margin:10px;
+/*        margin:10px;*/
         float: left;
         text-align: center;
 
@@ -107,7 +110,7 @@
 
         /*        max-width: 33%; */
         min-width: 33%px;
-        padding: 10px;
+/*        padding: 10px;*/
 
         border-radius: 5px;
         /*margin: 0 auto;*/
@@ -132,21 +135,11 @@
 
 
 
-/*.table {
-    position:static;*/
-   /* display: inline-table;
-    max-width: 100%;
-    min-width: 20px;
-    box-sizing: border-box;
-    text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-    border-collapse: collapse;
-    float: left;
-    word-wrap: normal;
-    resize: both;
-    overflow: auto;
-    */
+/*.table {*/
+
+/*    padding-top: 10%;*/
+
+
 
 
 
