--- a/lesson-6/css/main-6.css
+++ b/lesson-6/css/main-6.css
@@ -11,6 +11,15 @@ body {
     /* Declare the base font-family - from google font api or other */
 }
 
+.background {
+    position:relative;
+/*    padding-right: 10%;*/
+    z-index: -1;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    float: left;
+}
 header,
 nav,
 main,
@@ -85,12 +94,12 @@ main {}
 main h2 {}
 
 main figure {
-    margin: 0 0 .2rem 2%;
-    width: 96%;
+/*    margin: 0 0 .2rem 2%;*/
+/*    width: 96%;*/
 }
 
 main figure img {
-    width: 100%;
+/*    width: 100%;*/
 }
 
 section {}
