--- a/lesson-10/css/maing.css
+++ b/lesson-10/css/maing.css
@@ -272,3 +272,4 @@ box-shadow: 0 10px 0 1px #eee,0 16px 0 1px #eee,0 22px 0 1px #eee;
     padding: 5px;
     /*        margin: 5px;*/
 }
+nav ul li.active a {background-color: #0E89D5;}
