--- a/final/css/large1.css
+++ b/final/css/large1.css
@@ -2,9 +2,14 @@
 @media only screen and (min-width: 64em) {
 }
 fieldset{
-
-/*    margin: 3%;*/
+    
+    padding: 5px;
+    margin: 9px;
     min-width: 30%;
 }
+.iframe{
+        padding:10px;
+        width:25%
+    }
 
 }
