--- a/final/css/med.css
+++ b/final/css/med.css
@@ -7,6 +7,11 @@ fieldset{
 /*    margin: 3%;*/
     min-width: 100%;
 }
+    .iframe{
+        padding:10px;
+        width:50%;
+        min-width: 400px;
+    }
 
 
 
