--- a/final/css/mediumg.css
+++ b/final/css/mediumg.css
@@ -10,46 +10,48 @@
         float: right;
     }
     /* responsive images */
-    nav ul {
-        display: inherit;
-        /* float: left; */
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        background-color: #e6e9ed;
-        float: left;
+   nav ul {
+/*    display: none;*/
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+/*    width: 200px;*/
 
-    }
-    li {
-        float: left;
-        display: inline;
-        position: relative;
-    }
+    background-color: #0eff3c;
+    color: white;
+}
 
-    a {
-        display: inline-block;
-        padding: 8px;
-        background-color: #e6e9ed;
-    }
-    nav ul li a {
-        display: inline-block;
-        color: #000;
-        padding: 8px 16px;
-        text-decoration: none;
-        position: relative;
+nav ul li {
+    color: white;
+}
+
+nav ul li a {
+    display: block;
+    color: black;
+    padding: 8px 16px;
+    text-decoration: none;
+}
 
 
-    }
 
+
+nav ul li a:hover {
+    background-color: #0ebc00;
+    color: white;
+}
+
+/*
     li a:hover {
         background-color: #0E89D5;
         color: white;
     }
+*/
+/*
     .active {
 
         color: white;
     }
+*/
     header img {
         resize: both;
         max-height: 50%;
