--- a/final/css/maing.css
+++ b/final/css/maing.css
@@ -58,10 +58,7 @@ header {
     min-width: 100%;
 }
 .subheading{
-    align-content: center;
-    justify-content: center;
-/*    padding: 15px;*/
-/*    position:relative;*/
+    display:none;
 }
 
 /*header h1 {}*/
@@ -268,7 +265,7 @@ footer > p {}
 .top {
     display: flex;
     flex-direction: column;
-    
+
 
 }
 
@@ -327,3 +324,52 @@ box-shadow: 0 10px 0 1px #eee,0 16px 0 1px #eee,0 22px 0 1px #eee;
 
 }
 nav ul li.active a {background-color: #0ebc00;}
+
+.s1  {
+    border: 1px solid white;
+    display: block;
+    max-width: 50%;
+/*    margin: 15px;*/
+    float: left;
+    text-align: center;
+
+    min-width: 50%;
+/*    padding: 15px;*/
+
+    border-radius: 5px;
+    display: flex;
+    flex-flow: row wrap;
+
+}
+
+.s2  {
+    display: flex;
+    flex-flow: row wrap;
+    border: 1px solid white;
+    display: block;
+/*    margin: 15px;*/
+    float: left;
+    text-align: center;
+    min-width: 50%;
+    max-width: 50%;
+/*    padding: 15px;*/
+    border-radius: 5px;
+
+}
+.content {
+    text-align: justify;
+    max-width: 100%;
+    min-width: 100%;
+    align-content: center;
+    position: relative;
+    display: flex;
+    flex-flow: row wrap;
+    align-content: center;
+    justify-content: center;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 5px;
+    min-height: 100%;
+
+}
+
