--- a/final/css/mediumg.css
+++ b/final/css/mediumg.css
@@ -10,12 +10,13 @@
         float: right;
     }
     /* responsive images */
+/*
    nav ul {
-/*    display: none;*/
+
     list-style-type: none;
     margin: 0;
     padding: 0;
-/*    width: 200px;*/
+
 
     background-color: #0eff3c;
     color: white;
@@ -31,6 +32,41 @@ nav ul li a {
     padding: 8px 16px;
     text-decoration: none;
 }
+*/
+    nav ul {
+        display: inherit;
+        /* float: left; */
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+
+        float: left;
+
+    }
+    li {
+        float: left;
+        display: inline;
+        position: relative;
+    }
+
+    /*
+    a {
+    display: inline-block;
+    padding: 8px;
+    background-color: #e6e9ed;
+}
+    */
+    nav ul li a {
+        padding: 8px;
+        display: inline-block;
+        /*        color: #000;*/
+        padding: 8px 16px;
+        text-decoration: none;
+        position: relative;
+
+
+    }
 
 
 
